@@ -1,0 +1,20 @@
+/*
+ * To change this license header, choose License Headers in Project Properties.
+ * To change this template file, choose Tools | Templates
+ * and open the template in the editor.
+ */
+package es.upm.woa.agent.group1;
+
+/**
+ *
+ * @author ISU
+ */
+public interface Ticker {
+    
+    /**
+     * 
+     * @return current time in ticks
+     */
+    long getCurrentTick();
+    
+}
